# rag-template

./: .gitignore  ENDPOINTS_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  PLAN.md  QUALITY_REVIEW.md  README.md  api-spec.yml  config.json  pyproject.toml  requirements.txt  setup.sh  verify_implementation.py
.claude/: plan-driven-developer.md  sdlc-manager.md  settings.local.json  solution-planner.md
.claude/agents/: plan-test-quality-reviewer.md  test-from-plan-generator.md
data/: rag.db
data/documents/: c0f68e8f-02de-42a7-b123-a1a42461cea0_stored_file.txt
src/: __init__.py  chunk_repository.py  chunking_service.py  config.py  database.py  document_repository.py  document_service.py  main.py  models.py  storage.py  time_utils.py
tests/: __init__.py  conftest.py  test_chunk_repository.py  test_chunking_service.py  test_config.py  test_database.py  test_document_endpoints.py  test_document_repository.py  test_document_service.py  test_main.py  test_models.py  test_process_and_chunks_endpoints.py  test_storage.py  test_time_utils.py
